fix(blog): series post title text alignment

--- a/src/pages/blog.scss
+++ b/src/pages/blog.scss
@@ -24,7 +24,7 @@ div#app {
 
       section[role="list"] {
        section[role="listitem"] {
-        h2 {
+        >h2 {
           text-align: center;
         }
        }
